[gd_scene load_steps=5 format=3 uid="uid://i7ncmsg1fjjm"]

[ext_resource type="Script" path="res://scenes/ui/weapon card/weapon_card.gd" id="1_n4u3x"]
[ext_resource type="Texture2D" uid="uid://w88tyimfg3hx" path="res://graphics/ui_9_slice.png" id="2_x47yn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x0u08"]
texture = ExtResource("2_x47yn")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
modulate_color = Color(0.219608, 0.227451, 0.262745, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_837x1"]
texture = ExtResource("2_x47yn")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
modulate_color = Color(0.294118, 0.305882, 0.34902, 1)

[node name="WeaponCard" type="PanelContainer"]
clip_contents = true
custom_minimum_size = Vector2(210, 235)
offset_right = 200.0
offset_bottom = 226.0
theme_override_styles/panel = SubResource("StyleBoxTexture_x0u08")
script = ExtResource("1_n4u3x")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="WeaponTitlePanelContainer" type="PanelContainer" parent="MarginContainer/InfoContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_837x1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/InfoContainer/WeaponTitlePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/InfoContainer/WeaponTitlePanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="WeaponName" type="RichTextLabel" parent="MarginContainer/InfoContainer/WeaponTitlePanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.956863, 0.956863, 0.956863, 1)
layout_mode = 2
bbcode_enabled = true
text = "[center]Weapon[/center]"
fit_content = true

[node name="WeaponClass" type="RichTextLabel" parent="MarginContainer/InfoContainer/WeaponTitlePanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.721569, 0.729412, 0.760784, 1)
bbcode_enabled = true
text = "[center]Weapon Class[/center]"
fit_content = true

[node name="WeaponDescriptionPanelContainer" type="PanelContainer" parent="MarginContainer/InfoContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_837x1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/InfoContainer/WeaponDescriptionPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="WeaponDescription" type="RichTextLabel" parent="MarginContainer/InfoContainer/WeaponDescriptionPanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center]Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut placerat enim in malesuada auctor velit.[/center]"
fit_content = true

[node name="BuyButton" type="Button" parent="MarginContainer/InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
theme_type_variation = &"ButtonYellow"
text = "Buy"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/InfoContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="WeaponCostPanelContainer" type="PanelContainer" parent="MarginContainer/InfoContainer/HBoxContainer"]
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_837x1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/InfoContainer/HBoxContainer/WeaponCostPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/InfoContainer/HBoxContainer/WeaponCostPanelContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]10G[/center]"

[node name="SoldContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_837x1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/SoldContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="SoldLabel" type="RichTextLabel" parent="MarginContainer/SoldContainer/MarginContainer"]
modulate = Color(0.721569, 0.729412, 0.760784, 1)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center][wave amp=20.0 freq=6]Sold![/wave][/center]"
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/InfoContainer/BuyButton" to="." method="_on_buy_button_pressed"]
